fix(ui): use listview instead of datagrid