@@ -13,9 +13,13 @@ version = "1.0-SNAPSHOT"
 
 application {
     mainClassName = "sc.gui.GuiAppKt"
+    // these are required because of using JDK >8,
+    // see https://github.com/controlsfx/controlsfx/wiki/Using-ControlsFX-with-JDK-9-and-above
     applicationDefaultJvmArgs = listOf(
         // For accessing VirtualFlow field from the base class in GridViewSkin
         "--add-opens=javafx.controls/javafx.scene.control.skin=ALL-UNNAMED",
+        "--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED",
+        "--add-opens=javafx.graphics/javafx.scene=ALL-UNNAMED",
         // For accessing InputMap used in RangeSliderBehavior
         "--add-exports=javafx.controls/com.sun.javafx.scene.control.inputmap=ALL-UNNAMED"
     )
